src/objects/Work__c.object
<CustomObject>
    <description>User Stories and Bugs</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>Details of business acceptance criteria</description>
        <inlineHelpText>Details of business acceptance criteria</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The full detail for this piece of work</description>
        <inlineHelpText>The full detail for this piece of work</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <description>The parent Epic for this piece of Work</description>
        <inlineHelpText>The parent Epic for this piece of Work</inlineHelpText>
        <label>Epic</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of this piece of work as set by the business through the Product Owner</description>
        <inlineHelpText>The priority of this piece of work as set by the business through the Product Owner</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Not Prioritised</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>The absolute rank of this piece of Work</description>
        <inlineHelpText>The absolute rank of this piece of Work</inlineHelpText>
        <label>Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <description>The Sprint this piece of Work is contained within</description>
        <inlineHelpText>The Sprint this piece of Work is contained within</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of this piece of work</description>
        <inlineHelpText>The current status of this piece of work</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <description>The Story Point value for this piece of Work. Scale: 0, 1, 2, 3, 5, 8, 13, 20, 40, 100</description>
        <inlineHelpText>The Story Point value for this piece of Work. Scale: 0, 1, 2, 3, 5, 8, 13, 20, 40, 100</inlineHelpText>
        <label>Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Number__c</fullName>
        <description>Unique reference for each piece of work</description>
        <displayFormat>W-{000}</displayFormat>
        <inlineHelpText>Unique reference for each piece of work</inlineHelpText>
        <label>Work Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Work</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Work_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Points__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>